--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,8 @@
 apply plugin: 'com.android.application'
 
+apply plugin: HelloPlugin1
+apply plugin: HelloPlugin2
+
 android {
     compileSdkVersion rootProject.ext.android.compileSdkVersion
     defaultConfig {
@@ -181,4 +184,160 @@ dependencies {
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+}
+
+
+
+//------------------------------------
+/**
+ * 一、Gradle的构建周期.
+ *  1.1、Initialization
+ *      在该阶段，Gradle将会确定哪些项目参与构建，并为每个项目创建一个Project对象实例.
+ *      对于Android项目即执行 'settting.gradle' 文件.
+ *
+ *  1.2、Configuration
+ *      对于Android项目即为执行各个module下的 'build.gradle' 文件，这样各个 'build.gradle'文件中的task依赖关系才会被确定。
+ *
+ *  1.3、Execution
+ *      task的执行阶段.
+ *
+ * 注意: 写在Task闭包中的内容是在 configure 阶段执行的
+ *    而doFirst、doLast是在 execution 阶段执行的.
+ */
+task a {
+    println "task a "
+}
+
+task(taskBoth) {
+    //依赖a task先执行
+    dependsOn("a")
+
+    println "我会在Configuration和Execution阶段都执行"
+
+    doFirst {
+        println "我仅在testBoth的Execution阶段执行"
+    }
+
+    doLast {
+        println "我仅在testBoth的Execution阶段执行"
+    }
+}
+
+/**
+ * Hook Gradle 构建过程.
+ */
+//task badHook{
+//    tasks.findByName("assembleDebug").doFirst{
+//        println "hook afterEvaluate from BadHook"
+//    }
+//}
+task assHook {
+    afterEvaluate {
+        tasks.findByName("assembleDebug").doFirst {
+            println "hook afterEvaluate from assHook"
+        }
+    }
+}
+
+//task hookAssets {
+//    afterEvaluate {
+//        tasks.findByName("packageDebug").doFirst { task ->
+//            copy {
+//                def sourcePath = "${projectDir.absolutePath}/test.png"
+//
+//                def targetPath = "${task.assets.asFile.get()}"
+//
+//                println "sourcePath: ${sourcePath}, targetPath: ${targetPath}"
+//
+//                from sourcePath
+//                into targetPath
+//            }
+//        }
+//    }
+//}
+
+//task (name: actionTest, action: new Action<Task>() {
+//    @Override
+//    void execute(Task task) {
+//        println 'hello'
+//    }
+//}) {
+//}
+
+/**
+ * Gradle支持Task类的书写, 以便提高Task的复用性
+ */
+class GreetingTask extends DefaultTask {
+    String greeting = "hello from GreetingTask"
+
+    @TaskAction
+    def greet() {
+        println greeting
+    }
+}
+
+task hello(type: GreetingTask)
+
+task greeting(type: GreetingTask) {
+    greeting = "greetings from GreetingTask"
+}
+
+/**
+ * Task 实战
+ *
+ * 1、install apk之前必须有一个apk，因此必须依赖一个assembleDebug task
+ * 2、exec 闭包的参数
+ *      2.1、workingDir: 工作环境, 默认为当前project目录
+ *      2.2、commandLine: 需要命令行执行的命令
+ */
+task installAndRun(dependsOn: 'assembleDebug') {
+    doFirst {
+        exec {
+            workingDir "${buildDir}/outputs/apk/debug"
+            commandLine 'adb', 'install', '-r', 'app-debug.apk'
+        }
+        exec {
+            //AndroidManifest.xml的路径
+            def path = "${buildDir}/intermediates/instant_app_manifest/debug/AndroidManifest.xml"
+//            def path = "${buildDir}/intermediates/manifests/full/debug/AndroidManifest.xml"
+
+            /**
+             * Groovy 解析XML
+             * http://docs.groovy-lang.org/latest/html/documentation/#_processing_xml
+             */
+            //xml解析
+            def parser = new XmlParser(false, false).parse(new File(path))
+
+            //application 下的每一个 activity 结点
+            parser.application.activity.each { activity ->
+
+                // activity 下的每一个 intent-filter 结点
+                activity.'intent-filter'.each { filter ->
+                    // intent-filter 下的 action 结点中的 @android:name 包含 android.intent.action.MAIN
+                    if (filter.action.@"android:name".contains("android.intent.action.MAIN")) {
+                        def targetActivity = activity.@"android:name"
+
+                        commandLine 'adb', 'shell', 'am', 'start', '-n', "${android.defaultConfig.applicationId}/${targetActivity}"
+                    }
+                }
+            }
+        }
+    }
+}
+
+/**
+ * 创建插件的方式一: build script.
+ */
+class HelloPlugin1 implements Plugin<Project>{
+    @Override
+    void apply(Project project) {
+        project.task("helloPlugin1Task"){
+
+            group 'customPlugin'
+
+            doFirst {
+                println "Hello Plugin 1"
+            }
+        }
+    }
 }
