--- a/mylibrary/build.gradle
+++ b/mylibrary/build.gradle
@@ -19,6 +19,13 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+    flavorDimensions "mode"
+    productFlavors{
+        demo{
+            dimension "mode"
+        }
+    }
 }
 
 dependencies {
