--- a/app/build.gradle
+++ b/app/build.gradle
@@ -193,6 +193,7 @@ static def buildTime(){
     return new Date().format("yyyyMMdd", TimeZone.getTimeZone("UTC"))
 }
 
+
 /**
  * 添加配置依赖项
  */
@@ -208,10 +209,9 @@ dependencies {
     implementation rootProject.ext.dependencies["appcompat"]
     implementation rootProject.ext.dependencies["constriant"]
 
-    testImplementation 'junit:junit:4.12'
-
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    testImplementation rootProject.ext.dependencies["junit"]
+    androidTestImplementation rootProject.ext.dependencies["androidJunit"]
+    androidTestImplementation rootProject.ext.dependencies["espresso-core"]
 }
 
 
