--- a/config.gradle
+++ b/config.gradle
@@ -10,7 +10,10 @@ ext {
     ]
 
     dependencies = [
-            "appcompat": "androidx.appcompat:appcompat:1.0.2",
-            "constriant": "androidx.constraintlayout:constraintlayout:1.1.3"
+            "appcompat"    : "androidx.appcompat:appcompat:1.0.2",
+            "constriant"   : "androidx.constraintlayout:constraintlayout:1.1.3",
+            "junit"        : "junit:junit:4.12",
+            "androidJunit" : "androidx.test.ext:junit:1.1.1",
+            "espresso-core": "androidx.test.espresso:espresso-core:3.2.0"
     ]
 }
