--- a/testlibrary/build.gradle
+++ b/testlibrary/build.gradle
@@ -10,7 +10,6 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        consumerProguardFiles 'consumer-rules.pro'
     }
 
     buildTypes {
@@ -20,10 +19,26 @@ android {
         }
     }
 
-    flavorDimensions "mode"
-    productFlavors{
-        demo{
+    flavorDimensions "api", "mode"
+    productFlavors {
+        demo {
             dimension "mode"
+        }
+
+        full {
+            dimension "mode"
+        }
+
+        minApi24{
+            dimension "api"
+        }
+
+        minApi23{
+            dimension "api"
+        }
+
+        minApi21{
+            dimension "api"
         }
     }
 }
