--- a/mylibrary/build.gradle
+++ b/mylibrary/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     implementation rootProject.ext.dependencies["appcompat"]
+    implementation rootProject.ext.dependencies["constriant"]
 
     testImplementation rootProject.ext.dependencies["junit"]
     androidTestImplementation rootProject.ext.dependencies["androidJunit"]
