--- a/mylibrary/src/main/AndroidManifest.xml
+++ b/mylibrary/src/main/AndroidManifest.xml
@@ -1,2 +1,14 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.sample.gradle.demo.library" />
+    package="com.sample.gradle.demo.library" >
+
+    <application>
+        <activity android:name=".ActivityOne"
+            android:windowSoftInputMode="stateUnchanged">
+            <intent-filter>
+                <action android:name="android.intent.action.SEND"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+            </intent-filter>
+        </activity>
+    </application>
+
+</manifest>
